Fix logo cutoff on smaller screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,11 +46,14 @@
   text-align: center;
   width: 50%;
 }
-/*@media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
   .column {
     width: 100%;
   }
-}*/
+  .promo {
+    padding-top: 150px !important;
+  }
+}
 .disabled-link {
   pointer-events: none;
 }
